# email-sender-web-app

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  CONVENTIONS.md  DEPLOYMENT.md  DOCKER_COMPOSE_UPDATE.md  NEXTJS_MIGRATION.md  README.md  docker-compose.yml
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  alembic.ini  app.py  config.py  database.py  db.py  dependencies.py  email_sender.py  logger_config.py  main.py  models.py  pyproject.toml  requirements.txt  schemas.py
backend/alembic/: env.py
backend/alembic/versions/: 28eaad2e22a1_add_status_column_to_address_table.py  3d3a02b96a85_add_status_column_to_address_table.py  411013869bd9_add_status_column_to_address_table.py  43005307fe7e_add_status_column_to_address_table.py  c848bffcee9b_add_status_column_to_address_table.py
frontend/: .dockerignore  .env.example  Dockerfile  nginx.conf  package-lock.json  package.json
frontend-nextjs/: .dockerignore  Dockerfile  README.md  package-lock.json  package.json
frontend-nextjs/app/: layout.tsx  page.tsx  theme.ts
frontend-nextjs/app/address-book/: page.tsx
frontend-nextjs/app/api/: config.ts
frontend-nextjs/app/components/: EmailForm.tsx  FileUpload.tsx  StatusDisplay.tsx
frontend-nextjs/app/files/: page.tsx
frontend-nextjs/app/history/: page.tsx
frontend/public/: index.html  manifest.json
frontend/src/: App.js
frontend/src/api/: config.js
frontend/src/components/: EmailForm.js  FileUpload.js  StatusDisplay.js
frontend/src/pages/: AddressBookPage.js  EmailHistoryPage.js  EmailSenderPage.js  FilesManagerPage.js
nginx/: nginx.conf
