[project]
name = "email-sender"
version = "0.1.0"
description = ""
authors = [
    {name = "Jye Young Song",email = "lambki@naver.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "python-dotenv (>=1.0.1,<2.0.0)",
    "fastapi (>=0.115.8,<0.116.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "sqlalchemy (>=2.0.25,<3.0.0)",
    "pydantic[email] (>=2.10.6,<3.0.0)",
    "pydantic[email] (>=2.5.3,<3.0.0)",
    "python-multipart (>=0.0.7,<1.0.0)",
    "alembic (>=1.14.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
